# qrpmsg

./: .gitignore  .gitreview  .qmake.conf  CMakeLists.txt  README.md  configure.json  qrpmsg.pro  qt_cmdline.cmake  sync.profile
examples/: examples.pro
examples/rpmsg/: rpmsg.pro
examples/rpmsg/creaderasync/: creaderasync.pro  main.cpp  rpmsgreader.cpp  rpmsgreader.h
examples/rpmsg/cwriterasync/: cwriterasync.pro  main.cpp  rpmsgwriter.cpp  rpmsgwriter.h
examples/rpmsg/rpmsgecho/: main.cpp  rpmsgecho.pro  rpmsgreader.cpp  rpmsgreader.h
src/: CMakeLists.txt  src.pro
src/rpmsg/: CMakeLists.txt  configure.json  qrpmsg.cpp  qrpmsg.h  qrpmsg_p.h  qrpmsg_unix.cpp  qrpmsgglobal.h  qrpmsginfo.cpp  qrpmsginfo.h  qrpmsginfo_p.h  qrpmsginfo_unix.cpp  rpmsg-lib.pri  rpmsg.pro  rpmsglinuxhelper.cpp  rpmsglinuxhelper.h
tests/auto/: auto.pro
tests/auto/cmake/: CMakeLists.txt  cmake.pro
tests/auto/qrpmsg/: qrpmsg.pro  tst_qrpmsg.cpp
tests/global/: global.cfg
